/*
 * This protobuf file contains the definition of the requests and responses
 * used by a drand node to locally run some commands.
 */
syntax = "proto3";

package drand;

import "src/protobuf/common.proto";

service Control {
  // Status responds with the actual status of drand process
  rpc Status(StatusRequest) returns (StatusResponse) {}

  // ChainInfo returns the chain info for the chain hash or beacon id requested
  // in the metadata
  rpc ChainInfo(drand.ChainInfoRequest) returns (drand.ChainInfoPacket) {}

  rpc Shutdown(ShutdownRequest) returns (ShutdownResponse) {}

  rpc LoadBeacon(LoadBeaconRequest) returns (LoadBeaconResponse) {}

  rpc StartFollowChain(StartSyncRequest) returns (stream SyncProgress) {}

  rpc StartCheckChain(StartSyncRequest) returns (stream SyncProgress) {}
}

message ShutdownRequest { Metadata metadata = 1; }

message ShutdownResponse { Metadata metadata = 1; }

message LoadBeaconRequest { Metadata metadata = 1; }

message LoadBeaconResponse { Metadata metadata = 1; }

message StartSyncRequest {
  // info_hash was deprecated and later removed in favor of the metadata field
  reserved 1;
  // nodes to contact to
  repeated string nodes = 2;
  // up_to tells the drand daemon to not sync up after the given round.
  // if up_to is 0, the sync operation continues until it is canceled.
  uint64 up_to = 4;
  Metadata metadata = 5;
}

message SyncProgress {
  uint64 current = 1;
  uint64 target = 2;
  Metadata metadata = 3;
}
