syntax = "proto3";

package drand;

service Metrics {
  rpc Metrics(MetricsRequest) returns (MetricsResponse) {}
}

message MetricsRequest {}

message MetricsResponse { bytes metrics = 1; }
